updates in code

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                   View Projects
                 </button>
                 <a
-                  href="assets/sridhar_resume.pdf"
+                  href="assets/Sridhar_Resume_.pdf"
                   class="btn btn-secondary"
                   download
                 >
