updates in the resume section

--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
             <div class="resume-card-right">
               <a
                 class="btn btn-primary btn-resume"
-                href="assets/sridhar_resume.pdf"
+                href="assets/Sridhar_Resume_.pdf"
                 download
               >
                 Download Resume
