updated codolio link

--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
               <h3 class="contact-title">Contact Details</h3>
               <p class="contact-text">
                 I’m open to software development and full stack roles, remote or
-                on-site.
+                on-site . Let’s connect and build something great together!
               </p>
 
               <ul class="contact-list">
@@ -1029,6 +1029,17 @@
                     class="contact-link"
                   >
                     https://leetcode.com/u/Sridhar_curious/
+                  </a>
+                </li>
+                <li>
+                  <span class="contact-label">Codolio</span>
+                  <a
+                    href="https://codolio.com/profile/Sridhar"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="contact-link"
+                  >
+                    https://codolio.com/profile/Sridhar
                   </a>
                 </li>
               </ul>
